[Refactor] Change Swagger description
