# docs/swagger.yaml
@@ -104,21 +104,18 @@ definitions:
         example: Махаматов Таир
         type: string
     type: object
-externalDocs:
-  description: OpenAPI
-  url: https://swagger.io/resources/open-api/
 host: localhost:5051/
 info:
   contact:
-    email: support@swagger.io
-    name: https://web.telegram.org/a/#488960669
-    url: http://www.swagger.io/support
-  description: This is a server finapp-api.
+    email: ask@dr3dnought.ru
+    name: Alexander Drednought
+  description: 'This is a FinAppAPI Swaggers documentation. For any suggestions, questions
+    and deals write me in Telegram: @dr3dnought'
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
-  title: Finapp-api
+  title: FinAppAPI
   version: "1.0"
 paths:
   /auth/login:
